Fixed connect buttons too big for container.

--- a/priv/static/styles/dderl.css
+++ b/priv/static/styles/dderl.css
@@ -658,7 +658,7 @@ div#main_footer {
     color: #DD1122;
 }
 .buttonsDialogConnect {
-    font-size: 1.7em;
+    font-size: 1.5em;
 }
 .previousPage {
     -moz-transform: scale(-1, 1);
